Better footer social medias

--- a/index.html
+++ b/index.html
@@ -166,7 +166,12 @@
         <br> 
         missaoambiental.org@gmail.com<br> 
         <br> 
-        |(11) 96677-6565</p> 
+        |(11) 96677-6565
+        <br> <br>
+        <a tabindex="12" target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes2"><img src="./images/instagram 1.svg" alt="Logo Instagram"></a>
+        <a tabindex="13" target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes2"><img src="./images/facebook 1.svg" alt="Logo Facebook"></a>
+        <a tabindex="14" target="_blank" href="https://linktr.ee/missaoambiental" class="linktree redes2"><img src="images/Linktree.svg" alt="Logo da Linktree"></a>
+        </p> 
         <section class="rodape-final">
             <div class="lista-footer">
                 <ul class="lista-footer-li">
@@ -196,9 +201,6 @@
             </div>
         </div>
     </div>
-    <a tabindex="12" target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.svg" alt="Logo Instagram"></a>
-        <a tabindex="13" target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.svg" alt="Logo Facebook"></a>
-        <a tabindex="14" target="_blank" href="https://linktr.ee/missaoambiental" class="linktree redes"><img src="images/Linktree.svg" alt="Logo da Linktree"></a>
     </footer>
     </div>
     </div>
