implemtado os termos e servicos

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 <body>
     <main class="inicio">
     <header class="topo" id="cima">
+        <div class="popup">
+            <button id="close">&times;</button>
+            <h2>Termos de Serviços</h2>
+            <p>Clique no botão abaixo para ler.</p>
+            <form action="./Termos_e_condicoes/termos_e_servicos.html" method="post" target="_blank">
+                <input type="Submit" name="submit" value="Mostrar Termos e Serviços"/>
+            </form>
+        </div>
         <a tabindex="1" href="index.html" class="logo-amb"><img src="images/logo-amb.svg" alt="Logo da Missão Ambiental">Missão Ambiental</a>
         <button aria-expanded="false" aria-label="menu" class="icone-menu menu-layout">☰</button>
         <nav class="cabecalho">
@@ -82,25 +90,25 @@
     <div class="container carrossel-container my-3">
         <div class="row carrossel-item">
             <h1 tabindex="22">ORQUIDÁRIO</h1>
-            <p tabindex="23" class="col-sm-10 col-md-4 carrossel-texto"><b>O orquidário</b> é um projeto <b>desenvolvido em parceria com o Ohquidea</b> que <b>busca resgatar orquídeas</b> e <b>replantá-las em outros espaços</b>. Dessa maneira, o orquidário da Missão Ambiental foi <b>estruturado para receber as orquídeas descartadas</b>. Entre as espécies destacam a <b>Wanda, Cymbidium, Cattleya</b> e <b>Phalaenopsis</b>.</p>
+            <p tabindex="23" class="col-sm-10 col-md-6 carrossel-texto"><b>O orquidário</b> é um projeto <b>desenvolvido em parceria com o Ohquidea</b> que <b>busca resgatar orquídeas</b> e <b>replantá-las em outros espaços</b>. Dessa maneira, o orquidário da Missão Ambiental foi <b>estruturado para receber as orquídeas descartadas</b>. Entre as espécies destacam a <b>Wanda, Cymbidium, Cattleya</b> e <b>Phalaenopsis</b>.</p>
             <img tabindex="24" class="vertical col-sm-12 col-md-4 "src="images/blueberry-2686266_1280 1.png" alt="Árvore do Orquidário">
             <img tabindex="25" src="./images/jardim.png" alt="Jardim de orquideas" class="horizontal col-sm-12 col-md-4">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="26">OFICINAS DE EDUCAÇÃO AMBIENTAL</h1>
-            <p tabindex="27" class="col-sm-10 col-md-4 carrossel-texto"><b>As oficinas de educação</b> ambiental são <b>momentos organizados</b> para <b>expor, discutir</b> e <b>sensibilizar</b> as pessoas <b>sobre as temáticas relacionadas ao meio ambiente</b>. Entre as <b>oficinas foram realizadas sobre</b> PANCs – <b>Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas</b>.</p>
+            <p tabindex="27" class="col-sm-10 col-md-6 carrossel-texto"><b>As oficinas de educação</b> ambiental são <b>momentos organizados</b> para <b>expor, discutir</b> e <b>sensibilizar</b> as pessoas <b>sobre as temáticas relacionadas ao meio ambiente</b>. Entre as <b>oficinas foram realizadas sobre</b> PANCs – <b>Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas</b>.</p>
             <img tabindex="29" class="vertical col-sm-12 col-md-2" src="images/oficinasvertical.png" alt="Roda de voluntários em outro ângulo">
             <img tabindex="28" class="horizontal col-sm-12 col-md-4" src="images/oficina.png" alt="Roda de voluntários com o intuito de disutir">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="30">CAPTAÇÃO DE ÁGUA DE CHUVA:</h1>
-            <p tabindex="31" class="col-sm-10 col-md-4 carrossel-texto"><b>O sistema de captação de água pluvial</b> foi <b>implantado</b> pelo parceiro <b>Edison Urbano da Sempre Sustentável</b> com o objetivo de <b>reaproveitar a água de chuva</b> coletada pelo beiral do vizinho. <b>A água fica armazenada</b> na <b>bombona de 200L</b> e o excesso é <b>direcionado para os canteiros de hortaliças</b>. Além disso, é <b>utilizado</b> para <b>lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos</b>.</p>
+            <p tabindex="31" class="col-sm-10 col-md-6 carrossel-texto"><b>O sistema de captação de água pluvial</b> foi <b>implantado</b> pelo parceiro <b>Edison Urbano da Sempre Sustentável</b> com o objetivo de <b>reaproveitar a água de chuva</b> coletada pelo beiral do vizinho. <b>A água fica armazenada</b> na <b>bombona de 200L</b> e o excesso é <b>direcionado para os canteiros de hortaliças</b>. Além disso, é <b>utilizado</b> para <b>lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos</b>.</p>
             <img tabindex="32" class="vertical col-sm-12 col-md-4" src="images/captacaoagua.png" alt="Outro ângulo do barril de filtração de água">
             <img tabindex="33" class="horizontal col-sm-12 col-md-4" src="images/captacao.png" alt="Barril de filtração de água">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="34">HORTA EDUCATIVA COMUNITÁRIA:</h1>
-            <p tabindex="35" class="col-sm-10 col-md-5 carrossel-textoo">  <b>A horta educativa comunitária</b> foi <b>idealizada</b> para <b>proporcionar experiências sensoriais, alimentação orgânica e dinamismo</b>. É uma horta suspensa <b>confeccionada</b> com <b>caixas de isopor</b> e <b>mesas de madeiras remontadas de paletes</b>. A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.<b>Entre as hortaliças produzidas</b> nas caixas estão <b>vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló, feijão preto, erva cidreira, jambu, coentro-selvagem</b>, entre outros.</p>
+            <p tabindex="35" class="col-sm-10 col-md-7 carrossel-textoo">  <b>A horta educativa comunitária</b> foi <b>idealizada</b> para <b>proporcionar experiências sensoriais, alimentação orgânica e dinamismo</b>. É uma horta suspensa <b>confeccionada</b> com <b>caixas de isopor</b> e <b>mesas de madeiras remontadas de paletes</b>. A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.<b>Entre as hortaliças produzidas</b> nas caixas estão <b>vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló, feijão preto, erva cidreira, jambu, coentro-selvagem</b>, entre outros.</p>
             <img tabindex="38" class="vertical col-sm-12 col-md-4" src="images/horta123.png" alt="Horta">
             <img tabindex="37" class="horizontal col-sm-12 col-md-4" src="images/horta.png" alt="Flor laranja">
         </div>
@@ -121,7 +129,7 @@
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="47">ABELHAS SEM FERRÃO</h1>
-            <p tabindex="48" class="col-sm-10 col-md-4 carrossel-texto">A Missão Ambiental em <b>parceria</b> com o <b>SOS Abelhas Sem Ferrão</b> ajuda a <b>preservar e conscientizar sobre as abelhas nativas</b>. O espaço conta com <b>diversas espécies de abelhas sem ferrão</b> como <b>mirim droryana</b> (Plebeia droryana), <b>jataí</b> (Tetragonisca angustula), <b>arapuá</b> (Trigona spinipes), <b>boca-de-sapo</b> (Partamona helleri), <b>mandaguari</b> (Scaptotrigona Xanthotrich) e <b>marmelada amarela</b> (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como <b>abelha euglossa</b> (Euglossa bazinga) e as <b>mamangavas</b> (Bombus terrestris).</p>
+            <p tabindex="48" class="col-sm-10 col-md-5 carrossel-texto">A Missão Ambiental em <b>parceria</b> com o <b>SOS Abelhas Sem Ferrão</b> ajuda a <b>preservar e conscientizar sobre as abelhas nativas</b>. O espaço conta com <b>diversas espécies de abelhas sem ferrão</b> como <b>mirim droryana</b> (Plebeia droryana), <b>jataí</b> (Tetragonisca angustula), <b>arapuá</b> (Trigona spinipes), <b>boca-de-sapo</b> (Partamona helleri), <b>mandaguari</b> (Scaptotrigona Xanthotrich) e <b>marmelada amarela</b> (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como <b>abelha euglossa</b> (Euglossa bazinga) e as <b>mamangavas</b> (Bombus terrestris).</p>
             <img tabindex="50" class="vertical col-sm-12 col-md-4" src="images/abelhassemferrao2.png" alt="Foco na colméia artificial">
             <img tabindex="49" class="horizontal col-sm-12 col-md-4" src="images/abelhas.png" alt="Zoom nas abelhas">
         </div>
