feat: ajax api for form

--- a/index.html
+++ b/index.html
@@ -164,14 +164,17 @@
     <div id="agendar">
         <p tabindex="63" class="titulo">Agende uma Visita</p> 
     <p tabindex="64" class="cont-espaco">Para Agendar uma visita, preencha os campos abaixo:</p> 
-    <form action="https://formsubmit.co/ajax/gabrielssoares161@gmail.com" method="POST">
-        <label for="caixa-nome">Nome</label>
-        <input type="text" name="sname" id="caixa-nome" required>
-        <label for="caixa-email">Email</label>
-        <input type="email" id="caixa-email" name="email" required>
+    <form action="https://formsubmit.co/ajax/missaoambiental.org@gmail.com" 
+    method="POST" 
+    data-form
+    >
+        <label for="nome">Nome</label>
+        <input type="text" name="name" id="nome" required>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
         <label for="mensagem">Mensagem</label>
-        <textarea id="mensagem"rows="5" name="mensagem"></textarea required>
-        <button type="submit" id="enviar-btn">Enviar</button>
+        <textarea id="mensagem" name="mensagem" required></textarea>
+        <button type="submit" id="enviar-btn" data-button>Enviar</button>
     </form>
     </div> 
     <footer class="agendar2">
