--- a/index.html
+++ b/index.html
@@ -220,6 +220,16 @@
             </div>
         </div>
     </div>
+    <div class="paragrafo-Parceiros">
+        <p tabindex="79">Parceiros</p>
+        <div class="creditos">
+            <p tabindex="80">Conheça os nossos parceiros:</p>
+            <img tabindex="81" src="./images/ASF.jpg" alt="Logo da Assiciação S.O.S Abelhas sem Ferrão">
+            <img tabindex="81" src="./images/ASP.jpeg" alt="Logo do Aquário de São Paulo">
+            <img tabindex="81" src="./images/MI.jpeg" alt="Logo da Muda Ipiranga">
+            <img tabindex="81" src="./images/UHCSP.jpeg" alt="Logo da União de Hortas Comunitárias de São Paulo">
+        </div>
+    </div>
     </footer>
     </div>
     </div>
