--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
         <p tabindex="17" class="voluntariar">Se você deseja se voluntariar e nos ajudar, <br> clique na imagem abaixo:</p>
         <a tabindex="18" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe_r5UnINtsEyfoTkQUBshW4lwC5aIqGFsjzSh8NRTZDyoY7w/viewform?pli=1"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Link para se voluntariar"></a>
     </div>
-    <br> <br> <br>
     <div id="espaco">
         <p tabindex="19" class="titulo">Nosso Espaço</p>
     <div class="container carrossel-container my-3">
@@ -134,11 +133,10 @@
             <img tabindex="49" class="horizontal col-sm-12 col-md-4" src="images/abelhas.png" alt="Zoom nas abelhas">
         </div>
     </div>
-    <button tabindex="51" class="carrossel-btn" id="anterBtn">Previous</button>
-    <button tabindex="52" class="carrossel-btn" id="proxBtn">Next</button>
-
+    <img src="./images/esquerda.png" alt="Projeto Anterior" tabindex="51" class="carrossel-btn" id="anterBtn">
+    <img  src="./images/direita.png" alt="Próximo Projeto" tabindex="52" class="carrossel-btn" id="proxBtn">
     <div id="equipe">
-        <p tabindex="53" class="sub">Nossa Equipe</p>
+        <h1 tabindex="53" class="sub">Nossa Equipe</h1>
         <div class="container text-center">
             <div class="row" style="height: 1000px;">
     <div class="membro pos1 col-md-4 align-self-start">
@@ -153,7 +151,7 @@
         <p tabindex="59" class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
     <br>
-    <div class="membro pos3 col align-self-center">
+    <div class="membro pos3 col-md-4 align-self-center">
         <img tabindex="60" src="./images/perfil 1.png" alt="Foto do terceiro membro da equipe PlaceHolder">
         <p tabindex="61" class="nome">Nome</p>
         <p tabindex="62" class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
@@ -207,8 +205,7 @@
             <p tabindex="74">Termos de Uso</p>
             <div class="creditos">
                 <p tabindex="75">Créditos</p>
-                <p tabindex="76">Freepik</p>
-                <p><a tabindex="77" href="https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph">Imagem de ibrandify</a> no Freepik</p>
+                <p tabindex="76"><a href="https://br.freepik.com/">Freepik</a> todos os icones retirados</p>
             </div>
         </div>
         <div class="paragrafo-Termos">
@@ -224,10 +221,10 @@
         <p tabindex="79">Parceiros</p>
         <div class="creditos">
             <p tabindex="80">Conheça os nossos parceiros:</p>
-            <img tabindex="81" src="./images/ASF.jpg" alt="Logo da Assiciação S.O.S Abelhas sem Ferrão">
-            <img tabindex="81" src="./images/ASP.jpeg" alt="Logo do Aquário de São Paulo">
-            <img tabindex="81" src="./images/MI.jpeg" alt="Logo da Muda Ipiranga">
-            <img tabindex="81" src="./images/UHCSP.jpeg" alt="Logo da União de Hortas Comunitárias de São Paulo">
+            <a target="_blank" tabindex="81" href="https://www.facebook.com/sosabelhassemferrao/?locale=pt_BR"><img src="./images/ASF.jpg" alt="Logo da Assiciação S.O.S Abelhas sem Ferrão"></a>
+            <a target="_blank" tabindex="82" href="https://www.aquariodesp.com.br/"><img src="./images/ASP.jpeg" alt="Logo do Aquário de São Paulo"></a>
+            <a target="_blank" tabindex="83" href="https://www.facebook.com/mudaipiranga/?locale=pt_BR"><img src="./images/MI.jpeg" alt="Logo da Muda Ipiranga"></a>
+            <a target="_blank" tabindex="84" href="https://www.facebook.com/UniaodeHortasSP/?locale=pt_BR"><img src="./images/UHCSP.jpeg" alt="Logo da União de Hortas Comunitárias de São Paulo"></a>
         </div>
     </div>
     </footer>
