--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
         </div>
     </div>
     <div class="paragrafo-Parceiros">
-        <p tabindex="80">Parceiros</p>
+        <p class="parceiros" tabindex="80">Parceiros</p>
         <div class="creditos">
             <p tabindex="81">Conheça os nossos parceiros:</p>
-            <a target="_blank" tabindex="82" href="https://www.facebook.com/sosabelhassemferrao/?locale=pt_BR"><img src="./images/ASF.jpg" alt="Logo da Assiciação S.O.S Abelhas sem Ferrão"></a>
+            <a target="_blank" tabindex="82" href="https://www.facebook.com/sosabelhassemferrao/?locale=pt_BR"><img src="./images/ASF.jpg" alt="Logo da Associação S.O.S Abelhas sem Ferrão"></a>
             <a target="_blank" tabindex="83" href="https://www.aquariodesp.com.br/"><img src="./images/ASP.jpeg" alt="Logo do Aquário de São Paulo"></a>
             <a target="_blank" tabindex="84" href="https://www.facebook.com/mudaipiranga/?locale=pt_BR"><img src="./images/MI.jpeg" alt="Logo da Muda Ipiranga"></a>
             <a target="_blank" tabindex="85" href="https://www.facebook.com/UniaodeHortasSP/?locale=pt_BR"><img src="./images/UHCSP.jpeg" alt="Logo da União de Hortas Comunitárias de São Paulo"></a>
