Fixed therms and conditions

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button id="close">&times;</button>
             <h2>Termos de Serviços</h2>
             <p>Clique no botão abaixo para ler.</p>
-            <form action="./Termos_e_condicoes/termos_e_servicos.html" method="post" target="_blank">
+            <form action="./Termos_e_condicoes/termos_e_servicos.html" target="_blank">
                 <input type="Submit" name="submit" value="Mostrar Termos e Serviços"/>
             </form>
         </div>
