Removed logo working as a link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <input type="Submit" name="submit" value="Mostrar Termos e Serviços"/>
             </form>
         </div>
-        <a tabindex="1" href="index.html" class="logo-amb"><img src="images/logo-amb.svg" alt="Logo da Missão Ambiental">Missão Ambiental</a>
+        <p tabindex="1" class="logo-amb"><img  src="images/logo-amb.svg" alt="Logo da Missão Ambiental">Missão Ambiental</p>
         <button aria-expanded="false" aria-label="menu" class="icone-menu menu-layout">☰</button>
         <nav class="cabecalho">
             <button type="button" class="icone-menu fechar-menu" aria-expanded="false" aria-label="Close">×</button>
@@ -197,7 +197,7 @@
                     <li><a tabindex="70" href="#voluntario">Voluntário</a></li>
                     <li><a tabindex="71" href="#espaco">Nosso Espaço</a></li>
                     <li><a tabindex="72" href="#equipe">Equipe</a></li>
-                    <li><a tabindex="73" href="#vis-cont1">Contatos</a></li>
+                    <li><a tabindex="73" href="#agendar">Agendar</a></li>
                 </ul>
             </div>
         </section>
