--- a/index.html
+++ b/index.html
@@ -113,22 +113,22 @@
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="39">COMPOSTAGEM</h1>
-            <p tabindex="40" class="col-sm-10 col-md-7 carrossel-texto">  <b>A Missão Ambiental destina seus resíduos orgânicos para a compostagem</b>. No espaço emprega-se <b>diferentes formas de compostagem</b>, sendo utlizadas a <b>vermicompostagem, compostagem termofílica, compostagem de valetas, compostagem de materiais secos e compostagem de mosca soldado negra</b>.
+            <p tabindex="40" class="col-sm-10 col-md-10 carrossel-texto">  <b>A Missão Ambiental destina seus resíduos orgânicos para a compostagem</b>. No espaço emprega-se <b>diferentes formas de compostagem</b>, sendo utlizadas a <b>vermicompostagem, compostagem termofílica, compostagem de valetas, compostagem de materiais secos e compostagem de mosca soldado negra</b>.
                 <b>A compostagem termofílica</b> é aquela que agrega maior número de pessoas para apoio, controle da quantidade de resíduos e da temperatura das leiras.
                 <b>A compostagem em valetas</b> é a mais utilizada e recomendada para áreas verdes compactadas. O resíduo orgânico é depositado em um buraco superficial e depois coberto em canteiros de árvores e vegetação que se deseja nutrir.
                 <b>A vermicompostagem</b> é a compostagem empregada em recipientes com ajuda das minhocas californianas (Eisenia fétida) para decomposição de resíduos orgânicos. O processo prevê a coleta de biofertilizante e reaproveitamento do composto líquido.</p>
-                <img tabindex="42" class="vertical-especiais col-sm-10 col-md-4" src="images/compostagem123.png" alt="Zoom no processo de compostagem">
-                <img tabindex="41" class="horizontal-especiais col-sm-10 col-md-4" src="images/compostagem.png" alt="Equipe trabalhando no projeto de compostagem">
+                <img tabindex="42" class="vertical col-sm-10 col-md-4" src="images/compostagem123.png" alt="Zoom no processo de compostagem">
+                <img tabindex="41" class="horizontal col-sm-10 col-md-4" src="images/compostagem.png" alt="Equipe trabalhando no projeto de compostagem">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="43">ÁRVORES NATIVAS:</h1>
             <p tabindex="44" class="col-sm-10 col-md-7 carrossel-texto"><b>Ao longo do período de 5 anos foram plantadas</b> algumas <b>espécies nativas</b> de <b>Mata Atlântica e Cerrado Paulista</b> para <b>reflorestamento da área degradada</b>. Entre elas estão espécies como <b>Jaracatiá</b> (Jacaratia spinosa), <b>Cambuci</b> (Campomanesia phaea), <b>Lobeira</b> (Solanum lycocarpum), <b>Araucária</b> (Araucaria angustifolia), <b>Pau Jacaré</b> (Piptadenia gonoacantha), <b>Bacupari</b> (Garcinia gardneriana), <b>Juçara</b> (Euterpe edulis), <b>Embaúba Prateada</b> (Cecropia hololeuca), <b>Cereja-do-Rio-Grande</b> (Eugenia involucrata), <b>Pitanga Preta</b> (Eugenia uniflora), <b>Cambucá</b> (Plinia edulis), <b>Embira-de-Sapo</b> (Lonchocarpus muehlbergianus), <b>Uvaia</b> (Eugenia pyriformis), <b>Jequitibá Branco</b> (Cariniana estrellensis), <b>Angico Vermelho</b> (Anadenanthera macrocarpa) <b>Ingá-do-Brejo</b> (Inga uruguensis), <b>Cabeludinha</b> (Myrciaria glazioviana), entre outras.</p>
-            <img tabindex="45" class="vertical-especiais col-sm-12 col-md-6" src="images/arvoresnativasdireita.png" alt="Muda pequena de árvore">
-            <img tabindex="46" class="vertical-especiais col-sm-12 col-md-4" src="images/arvoresnativas esquerda.png" alt="Planta com folhas vermelhas">
+            <img tabindex="45" class="vertical col-sm-12 col-md-4" src="images/arvoresnativasdireita.png" alt="Muda pequena de árvore">
+            <img tabindex="46" class="horizontal col-sm-12 col-md-4" src="images/arvoresnativasesquerda.png" alt="Planta com folhas vermelhas">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="47">ABELHAS SEM FERRÃO</h1>
-            <p tabindex="48" class="col-sm-10 col-md-5 carrossel-texto">A Missão Ambiental em <b>parceria</b> com o <b>SOS Abelhas Sem Ferrão</b> ajuda a <b>preservar e conscientizar sobre as abelhas nativas</b>. O espaço conta com <b>diversas espécies de abelhas sem ferrão</b> como <b>mirim droryana</b> (Plebeia droryana), <b>jataí</b> (Tetragonisca angustula), <b>arapuá</b> (Trigona spinipes), <b>boca-de-sapo</b> (Partamona helleri), <b>mandaguari</b> (Scaptotrigona Xanthotrich) e <b>marmelada amarela</b> (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como <b>abelha euglossa</b> (Euglossa bazinga) e as <b>mamangavas</b> (Bombus terrestris).</p>
+            <p tabindex="48" class="col-sm-10 col-md-7 carrossel-texto">A Missão Ambiental em <b>parceria</b> com o <b>SOS Abelhas Sem Ferrão</b> ajuda a <b>preservar e conscientizar sobre as abelhas nativas</b>. O espaço conta com <b>diversas espécies de abelhas sem ferrão</b> como <b>mirim droryana</b> (Plebeia droryana), <b>jataí</b> (Tetragonisca angustula), <b>arapuá</b> (Trigona spinipes), <b>boca-de-sapo</b> (Partamona helleri), <b>mandaguari</b> (Scaptotrigona Xanthotrich) e <b>marmelada amarela</b> (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como <b>abelha euglossa</b> (Euglossa bazinga) e as <b>mamangavas</b> (Bombus terrestris).</p>
             <img tabindex="50" class="vertical col-sm-12 col-md-4" src="images/abelhassemferrao2.png" alt="Foco na colméia artificial">
             <img tabindex="49" class="horizontal col-sm-12 col-md-4" src="images/abelhas.png" alt="Zoom nas abelhas">
         </div>
